[project]
name = "my_sqlalchemy_tutorial"
version = "0.1.0"
description = "SQLAlchemy basics"
authors = [
    {name = "Jamezfn",email = "jamesmakachia19@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
